# k8s-demo-app

./: .gitignore  Dockerfile  pyproject.toml  server.py
.github/workflows/: build.yml  opengrep.json  opengrep.yml
configs/base/: config.yaml  demo.conf
configs/dev/: config.yaml  demo.conf
deployments/kustomize/base/: debug.yaml  deployment.yaml  gateway-configmap.yaml  gateway.yaml  hpa.yaml  httproute.yaml  kustomization.yaml  local-storage.yaml  metalb-config.yaml  opentelemetry-clusterrole.yaml  opentelemetry-values.yaml  pdb.yaml  prometheus-adapter-values.yaml  prometheus-values.yaml  pv.yaml  pvc.yaml  service.yaml  servicemonitor.yaml  test-statsd-tcp.py  test-statsd-udp.py
deployments/kustomize/overlays/dev/: deployment.yaml  kustomization.yaml  podmonitoring.yaml
deployments/skaffold/dev/: skaffold.yaml
