#[build-system]
#requires = ["setuptools >= 61.0"]
#build-backend = "setuptools.build_meta"

[project]
name = "my-demo"
version = "1.0.0"
dynamic = ["version"]
description = "A Demo App"
requires-python = ">=3.13"
authors = [
  {name = "Shawn Starr", email = "spstarr@sh0n.net"},
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
flask = "^3.1.1"
prometheus-client = "^0.22.0"
